--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.mapsmessaging</groupId>
   <artifactId>Schemas</artifactId>
-  <version>1.0.2</version>
+  <version>1.0.3</version>
   <packaging>jar</packaging>
 
   <name>Maps Messaging - Schemas</name>
@@ -210,7 +210,30 @@
     </plugins>
   </build>
 
+  <repositories>
+    <repository>
+      <id>mapsmessaging.io</id>
+      <name>artifactory-releases</name>
+      <url>https://mapsmessaging.jfrog.io/artifactory/mapsmessaging-mvn-prod</url>
+    </repository>
+
+    <repository>
+      <id>snaphsot.mapsmessaging.io</id>
+      <name>artifactory-snapshot</name>
+      <url>https://mapsmessaging.jfrog.io/artifactory/mapsmessaging-mvn-snapshot</url>
+    </repository>
+  </repositories>
+
+
   <dependencies>
+
+    <!-- JMS Selector logic module -->
+    <dependency>
+      <groupId>io.mapsmessaging</groupId>
+      <artifactId>Extensible_JMS_Selector_Parser</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.json/json -->
     <dependency>
       <groupId>org.json</groupId>
