--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
 
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.organization>maps-messaging</sonar.organization>
-    <sonar.projectKey>Client_Layer</sonar.projectKey>
+    <sonar.projectKey>Schemas</sonar.projectKey>
 
     <sonar.sources>src/main</sonar.sources>
     <sonar.test.exclusions>
