--- a/pom.xml
+++ b/pom.xml
@@ -331,6 +331,13 @@
       <version>2.9.1</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.quickfixj/quickfixj-core -->
+    <dependency>
+      <groupId>org.quickfixj</groupId>
+      <artifactId>quickfixj-core</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+
     <dependency>
       <artifactId>lombok</artifactId>
       <groupId>org.projectlombok</groupId>
