--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,7 @@
           <argLine>@{argLine}</argLine>
           <includes>
             <include>**/*Test.java</include>
+            <include>**/Test*.java</include>
             <include>**/*IT.java</include>
           </includes>
         </configuration>
