--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.mapsmessaging</groupId>
   <artifactId>Schemas</artifactId>
-  <version>1.1.3</version>
+  <version>1.1.4</version>
   <packaging>jar</packaging>
 
   <name>Maps Messaging - Schemas</name>
@@ -288,6 +288,12 @@
 
 
   <dependencies>
+    <!-- Simple logging interface -->
+    <dependency>
+      <groupId>io.mapsmessaging</groupId>
+      <artifactId>Simple_Logging</artifactId>
+      <version>2.0.3</version>
+    </dependency>
 
     <!-- JMS Selector logic module -->
     <dependency>
