--- a/pom.xml
+++ b/pom.xml
@@ -287,6 +287,11 @@
 
 
   <dependencies>
+    <dependency>
+      <groupId>io.mapsmessaging</groupId>
+      <artifactId>Simple_Logging</artifactId>
+      <version>2.0.3</version>
+    </dependency>
 
     <!-- JMS Selector logic module -->
     <dependency>
