exclude the tests from code coverage

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,7 @@
           <excludes>
             <!-- test code, lets not track the testing -->
             <exclude>**/*Test.*</exclude>
+            <exclude>**/Test*.*</exclude>
           </excludes>
         </configuration>
         <executions>
