--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
   ~
-  ~     Copyright [ 2020 - 2022 ] [Matthew Buckton]
+  ~     Copyright [ 2020 - 2023 ] [Matthew Buckton]
   ~
   ~     Licensed under the Apache License, Version 2.0 (the "License");
   ~     you may not use this file except in compliance with the License.
@@ -26,7 +26,7 @@
   <version>2.0.7</version>
   <packaging>jar</packaging>
 
-  <name>Maps Messaging - Schemas</name>
+  <name>Schema Management</name>
   <description>Provides an extensible functionality to serialize and deserialize data</description>
   <url>http://www.mapsmessaging.io</url>
 
