--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,19 @@
   <description>Provides an extensible functionality to serialize and deserialize data</description>
   <url>http://www.mapsmessaging.io</url>
 
+  <developers>
+    <developer>
+      <id>mbuckton</id>
+      <name>Matthew Buckton</name>
+      <organization>Maps Messaging</organization>
+      <organizationUrl>http://mapsmessaging.io/</organizationUrl>
+      <roles>
+        <role>founder</role>
+      </roles>
+      <timezone>Australia/Sydney</timezone>
+    </developer>
+  </developers>
+
   <licenses>
     <license>
       <distribution>repo</distribution>
@@ -46,6 +59,7 @@
   <scm>
     <url>https://github.com/Maps-Messaging/schemas.git</url>
   </scm>
+
   <profiles>
     <profile>
       <id>mac</id>
@@ -55,7 +69,7 @@
         </os>
       </activation>
       <properties>
-        <protocCommand>/Users/matthew/Downloads/protoc-21.1-osx-aarch_64/bin/protoc</protocCommand>
+        <protocCommand>/Users/matthew/homebrew/bin/protoc</protocCommand>
       </properties>
     </profile>
     <profile>
@@ -87,6 +101,7 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <gpg.keyname>matthew.buckton@mapsmessaging.io</gpg.keyname>
 
     <runSuite>**/*Suite.class</runSuite>
     <!-- Below property indicates the pattern of the test suite -->
@@ -111,8 +126,49 @@
     </sonar.test.exclusions>
   </properties>
 
+  <distributionManagement>
+    <snapshotRepository>
+      <id>mapsmessaging.io</id>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>mapsmessaging.io</id>
+      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
+
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>3.0.1</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+            <configuration>
+              <keyname>${gpg.keyname}</keyname>
+              <passphraseServerId>${gpg.keyname}</passphraseServerId>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.8</version>
+        <extensions>true</extensions>
+        <configuration>
+          <serverId>mapsmessaging.io</serverId>
+          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+          <autoReleaseAfterClose>true</autoReleaseAfterClose>
+        </configuration>
+      </plugin>
+
       <!-- Allow JDKs greater than 1.8 to be used by maven -->
       <!-- build the source jar as well -->
       <plugin>
@@ -122,7 +178,6 @@
         <executions>
           <execution>
             <id>attach-sources</id>
-            <phase>verify</phase>
             <goals>
               <goal>jar-no-fork</goal>
             </goals>
@@ -280,33 +335,18 @@
     </plugins>
   </build>
 
-  <repositories>
-    <repository>
-      <id>mapsmessaging.io</id>
-      <name>artifactory-releases</name>
-      <url>https://mapsmessaging.jfrog.io/artifactory/mapsmessaging-mvn-prod</url>
-    </repository>
-
-    <repository>
-      <id>snaphsot.mapsmessaging.io</id>
-      <name>artifactory-snapshot</name>
-      <url>https://mapsmessaging.jfrog.io/artifactory/mapsmessaging-mvn-snapshot</url>
-    </repository>
-  </repositories>
-
-
   <dependencies>
     <dependency>
       <groupId>io.mapsmessaging</groupId>
       <artifactId>Simple_Logging</artifactId>
-      <version>2.0.6</version>
+      <version>2.0.7</version>
     </dependency>
 
     <!-- JMS Selector logic module -->
     <dependency>
       <groupId>io.mapsmessaging</groupId>
       <artifactId>Extensible_JMS_Selector_Parser</artifactId>
-      <version>1.1.8</version>
+      <version>1.1.9</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.json/json -->
