--- a/pom.xml
+++ b/pom.xml
@@ -355,6 +355,12 @@
       <artifactId>json</artifactId>
       <version>20230227</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.everit.json/org.everit.json.schema -->
+    <dependency>
+      <groupId>org.everit.json</groupId>
+      <artifactId>org.everit.json.schema</artifactId>
+      <version>1.5.1</version>
+    </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
     <dependency>
