--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.mapsmessaging</groupId>
-  <artifactId>Schemas</artifactId>
-  <version>2.1.2</version>
+  <artifactId>schemas</artifactId>
+  <version>2.1.3-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Schema Management</name>
@@ -94,6 +94,54 @@
         <protocCommand>protoc</protocCommand>
       </properties>
     </profile>
+    <profile>
+      <!-- Default profile for regular releases -->
+      <id>release</id>
+      <distributionManagement>
+        <repository>
+          <id>ossrh</id>
+          <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+        </repository>
+      </distributionManagement>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+            <version>1.6.13</version>
+            <extensions>true</extensions>
+            <configuration>
+              <serverId>mapsmessaging.io</serverId>
+              <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+              <autoReleaseAfterClose>true</autoReleaseAfterClose>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>snapshot</id>
+      <repositories>
+        <repository>
+          <id>github2</id>
+          <url>https://maven.pkg.github.com/Maps-Messaging/simple_logging</url>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+        </repository>
+        <repository>
+          <id>github</id>
+          <url>https://maven.pkg.github.com/Maps-Messaging/jms_selector_parser</url>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+        </repository>
+      </repositories>
+    </profile>
   </profiles>
 
 
@@ -128,11 +176,11 @@
 
   <distributionManagement>
     <snapshotRepository>
-      <id>mapsmessaging.io</id>
-      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+      <id>github</id>
+      <url>https://maven.pkg.github.com/Maps-Messaging/schema</url>
     </snapshotRepository>
     <repository>
-      <id>mapsmessaging.io</id>
+      <id>ossrh</id>
       <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
   </distributionManagement>
@@ -156,17 +204,6 @@
             </configuration>
           </execution>
         </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.sonatype.plugins</groupId>
-        <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>1.6.13</version>
-        <extensions>true</extensions>
-        <configuration>
-          <serverId>mapsmessaging.io</serverId>
-          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
-          <autoReleaseAfterClose>true</autoReleaseAfterClose>
-        </configuration>
       </plugin>
 
       <!-- Allow JDKs greater than 1.8 to be used by maven -->
@@ -338,15 +375,15 @@
   <dependencies>
     <dependency>
       <groupId>io.mapsmessaging</groupId>
-      <artifactId>Simple_Logging</artifactId>
-      <version>2.0.9</version>
+      <artifactId>simple_logging</artifactId>
+      <version>2.0.10-SNAPSHOT</version>
     </dependency>
 
     <!-- JMS Selector logic module -->
     <dependency>
       <groupId>io.mapsmessaging</groupId>
-      <artifactId>Extensible_JMS_Selector_Parser</artifactId>
-      <version>1.1.11</version>
+      <artifactId>jms_selector_parser</artifactId>
+      <version>1.1.14-SNAPSHOT</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.json/json -->
