--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
         </os>
       </activation>
       <properties>
-        <protocCommand>protoc</protocCommand>
+          <protocCommand>d:\protobuf\bin\protoc</protocCommand>
       </properties>
     </profile>
     <profile>
@@ -465,6 +465,13 @@
       <groupId>org.projectlombok</groupId>
       <version>1.18.30</version>
     </dependency>
+
+      <!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations -->
+      <dependency>
+          <groupId>io.swagger.core.v3</groupId>
+          <artifactId>swagger-annotations</artifactId>
+          <version>2.2.21</version>
+      </dependency>
 
     <!-- Junit5 -->
     <dependency>
