--- a/pom.xml
+++ b/pom.xml
@@ -296,7 +296,7 @@
           <charset>UTF-8</charset>
           <encoding>UTF-8</encoding>
           <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
-          <reportOutputDirectory>${project.build.directory}/site/docs</reportOutputDirectory>
+          <outputDirectory>${project.build.directory}/site/docs</outputDirectory>
           <show>public</show>
           <sourceFileExcludes>
             <sourceFileExclude>**/*Test.java</sourceFileExclude>
