--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
   ~
-  ~  Copyright [ 2020 - 2024 ] Matthew Buckton
-  ~  Copyright [ 2024 - 2025 ] MapsMessaging B.V.
+  ~     Copyright [ 2020 - 2025 ] [Matthew Buckton]
   ~
-  ~  Licensed under the Apache License, Version 2.0 with the Commons Clause
-  ~  (the "License"); you may not use this file except in compliance with the License.
-  ~  You may obtain a copy of the License at:
+  ~     Licensed under the Apache License, Version 2.0 (the "License");
+  ~     you may not use this file except in compliance with the License.
+  ~     You may obtain a copy of the License at
   ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~      https://commonsclause.com/
+  ~         http://www.apache.org/licenses/LICENSE-2.0
   ~
-  ~  Unless required by applicable law or agreed to in writing, software
-  ~  distributed under the License is distributed on an "AS IS" BASIS,
-  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~  See the License for the specific language governing permissions and
-  ~  limitations under the License.
-  ~
+  ~     Unless required by applicable law or agreed to in writing, software
+  ~     distributed under the License is distributed on an "AS IS" BASIS,
+  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~     See the License for the specific language governing permissions and
+  ~     limitations under the License.
   -->
 
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -407,7 +404,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.14.0</version>
         <configuration>
-          <source>11</source>
+          <source>21</source>
           <target>11</target>
         </configuration>
       </plugin>
