--- a/pom.xml
+++ b/pom.xml
@@ -471,6 +471,12 @@
       <version>1.12.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-cbor</artifactId>
+      <version>2.17.0</version> <!-- or whatever version you're on -->
+    </dependency>
+
 
     <!-- https://mvnrepository.com/artifact/org.apache.qpid/proton-j -->
     <dependency>
